@@ -67,8 +67,7 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(Collections.singletonList("*"));
-//        config.setAllowedOriginPatterns(List.of("http://localhost:8080", "http://localhost:8082", "http://localhost:8083", "http://localhost:3000"));
+        config.setAllowedOriginPatterns(List.of("http://localhost:8080", "http://localhost:8082", "http://localhost:8083", "http://localhost:3000", "http://jibber_jabber_proxy"));
         config.addAllowedHeader("*");
         config.addAllowedMethod("OPTIONS");
         config.addAllowedMethod("GET");
